# server/src/controllers/orders.ts
@@ -15,15 +15,17 @@ export class OrdersController {
   @OperationId("Create")
   @Security("Bearer", ["AuthService"])
   @Post("create")
-  public async create(@Body() request: IOrderCreateRequest): Promise<void> {
+  public async create(@Body() request: IOrderCreateRequest): Promise<{}> {
     await ordersServices.create(request);
+    return {};
   }
   @Tags("OrdersService")
   @OperationId("Update")
   @Security("Bearer", ["AuthService"])
   @Post("update")
-  public async update(@Body() request: IOrder): Promise<IOrder> {
-    return await ordersServices.update(request);
+  public async update(@Body() request: IOrderCreateRequest): Promise<{}> {
+    await ordersServices.update(request);
+    return {};
   }
   @Tags("OrdersService")
   @OperationId("Remove")
@@ -31,5 +33,12 @@ export class OrdersController {
   @Post("remove")
   public async remove(@Body() request: { id: number }): Promise<{}> {
     return await ordersServices.remove(request);
+  }
+  @Tags("OrdersService")
+  @OperationId("OrerPositionFinish")
+  @Security("Bearer", ["AuthService"])
+  @Post("order-position-finish")
+  public async orderPositionFinish(@Body() request: { orderPositionId: number }): Promise<{}> {
+    return await ordersServices.orderPositionFinish(request.orderPositionId);
   }
 }
