# server/src/services/orders-services.ts
@@ -3,7 +3,7 @@ import ordersPositionsRepository from "../repositories/orders-positions-reposito
 import ordersRepository from "../repositories/orders-repository";
 
 const search = async (): Promise<IOrder[]> => {
-  const orders = await ordersRepository.findAll();
+  const orders = await ordersRepository.findAllActive();
   const result = [];
 
   for (const order of orders) {
@@ -22,23 +22,52 @@ const create = async (order: IOrderCreateRequest): Promise<void> => {
   const createdOrder = await ordersRepository.create({
     tableId: order.tableId,
     comment: order.comment,
-    createTime: new Date().toISOString(),
+    createTime: order.createTime,
+    status: "active",
   });
 
   for (const position of order.positions) {
     await ordersPositionsRepository.create({
       orderId: createdOrder.id,
       positionId: position.positionId,
-      additional: position.additional.map((a) => `${a.count}-${a.id}`).join("/"),
+      additional: position.additional?.map((a) => `${a.count}-${a.id}`).join("/") || "",
       comment: position.comment,
       startTime: new Date().toISOString(),
     });
   }
 };
 
-const update = async (category: IOrder): Promise<IOrder> => {
-  const updatedCategory = await ordersRepository.updateById(category, category.id || 0);
-  return updatedCategory;
+const update = async (order: IOrderCreateRequest): Promise<void> => {
+  const updatedOrder = await ordersRepository.updateById(
+    {
+      tableId: order.tableId,
+      comment: order.comment,
+      status: "active",
+    },
+    order.orderId || 0
+  );
+
+  const oldOrderPositions = await ordersPositionsRepository.findAllByOrderId(order.orderId || 0);
+
+  for (const orderPosition of oldOrderPositions) {
+    const isOldOrderPositionRemoved = !order.positions.find((op) => op.id === orderPosition.id);
+
+    if (isOldOrderPositionRemoved) {
+      await ordersPositionsRepository.removeById(orderPosition.id);
+    }
+  }
+
+  for (const position of order.positions) {
+    if (!position.id) {
+      await ordersPositionsRepository.create({
+        orderId: updatedOrder.id,
+        positionId: position.positionId,
+        additional: position.additional?.map((a) => `${a.count}-${a.id}`).join("/") || "",
+        comment: position.comment,
+        startTime: new Date().toISOString(),
+      });
+    }
+  }
 };
 
 const remove = async (category: { id: number }): Promise<{}> => {
@@ -46,4 +75,31 @@ const remove = async (category: { id: number }): Promise<{}> => {
   return {};
 };
 
-export default { search, create, update, remove };
+const orderPositionFinish = async (orderPositionId: number): Promise<{}> => {
+  const updatedOrderPosition = await ordersPositionsRepository.updateById(
+    {
+      finishTime: new Date().toISOString(),
+    },
+    orderPositionId
+  );
+
+  const allPositionInOrder = await ordersPositionsRepository.findAllByOrderId(
+    Number(updatedOrderPosition.orderId)
+  );
+
+  const unFinishedPositions = allPositionInOrder.filter((op) => !op.finishTime);
+
+  if (!unFinishedPositions?.length) {
+    await ordersRepository.updateById(
+      {
+        status: "finished",
+        finishTime: new Date().toISOString(),
+      },
+      Number(updatedOrderPosition.orderId)
+    );
+  }
+
+  return {};
+};
+
+export default { search, create, update, remove, orderPositionFinish };
